[package]
name = "amtrak-gtfs-rt"
version = "0.1.17"
license = "AGPL-3.0"
description = "Converts Amtrak Track-A-Train to valid GTFS-rt vehicle and trip information"
edition = "2021"
#Removing this repository link is prohibited in any fork.
repository = "https://github.com/catenarytransit/amtrak-gtfs-rt"

[lints.rust]
unused_must_use = "deny"
non_ascii_idents = "deny"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amtk = "0.1.0"
amtrak-api = "0.1.0"
base64 = "0.21"
chrono = "0.4"
chrono-tz = "0.8"
geojson = "0.24"
gtfs-rt = "0.4"
gtfs-structures = "0.41"
openssl = "0.10"
prost = "0.11"
reqwest = {version = "0.11", features = ["gzip","brotli","rustls-tls","deflate","cookies","mime_guess"]}
rust-crypto = "0.2"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
