[package]
name = "amtrak-gtfs-rt"
version = "0.9.0"
license = "AGPL-3.0"
description = "Converts Amtrak Track-A-Train to valid GTFS-rt vehicle and trip information"
edition = "2024"
#Removing this repository link is prohibited in any fork.
repository = "https://github.com/catenarytransit/amtrak-gtfs-rt"

[lints.rust]
unused_must_use = "deny"
non_ascii_idents = "deny"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amtk = "0.1.0"
base64 = "0.22"
chrono = "0.4"
chrono-tz = "0.10"
futures = "0.3"
geojson = "1.0"
gtfs-realtime = "0.2.0"
gtfs-structures = "0.46.1"

prost = "0.14"
reqwest = { version = "0.13", features = [
    "gzip",
    "brotli",
    "rustls",
    "deflate",
    "cookies",
] }
rust-crypto = "0.2"
serde = "1.0"
serde_json = "1.0 "
scraper = "0.22"

[dev-dependencies]
tokio = { version = "1.48", features = ["full"] }
